kustomize/base/microservices/gateway/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: faraz-gateway-deploy
  namespace: application
spec:
  replicas: 1
  selector:
    matchLabels:
      app: faraz-gateway
  template:
    metadata:
      labels:
        app: faraz-gateway
    spec:
      containers:
        - name: gateway
          image: nginxdemos/hello
          ports:
            - containerPort: 80
          livenessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 5
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 5
            periodSeconds: 5
          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "500m"
              memory: "256Mi"
