kustomize/base/microservices/gateway/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: faraz-gateway-svc
  namespace: application
spec:
  selector:
    app: faraz-gateway
  ports:
    - port: 80
      targetPort: 80
  type: ClusterIP
