kustomize/base/microservices/gateway/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: faraz-gateway-ingress
  namespace: application
spec:
  rules:
    - host: faraz.billeasy.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: faraz-gateway-svc
                port:
                  number: 80
